# Web_AquaGWAS

./: .gitignore  CMakeLists.txt  ReadMe.md  client.cpp  main.cpp  server.cpp
include/: assocrunner.hpp  assoctool.hpp  conf.hpp  corrrunner.hpp  emmax.hpp  emmaxassocrunner.hpp  gemma.hpp  gemmaassocrunner.hpp  gemmaparam.hpp  gwasparam.hpp  gwasrunner.hpp  ldrunner.hpp  mainworker.hpp  paramparser.hpp  pcarunner.hpp  plink.hpp  plinkassocrunner.hpp  qcrunner.hpp  qqmanrunner.hpp  tool.hpp  toolfactory.hpp  util.hpp
log/: AsyncLogging.cpp  AsyncLogging.h  FileUtil.cpp  FileUtil.h  LogFile.cpp  LogFile.h  LogStream.h  Logging.cpp
output/: 222_filter1.cXX.txt  222_filter1.log.txt
src/: gemma.cpp  gwasrunner.cpp  mainworker.cpp  plink.cpp  util.cpp
